--- a/Roguelike.vcxproj.filters
+++ b/Roguelike.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="moveEnemies.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="chests1.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gameFunctions.h">
@@ -36,6 +39,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="moveEnemies.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="chests1.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
