--- a/Roguelike.vcxproj.filters
+++ b/Roguelike.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="chest2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="NPC2.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gameFunctions.h">
@@ -78,6 +81,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="chest2.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="NPC2.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
