Небольшие доработки + исправление бага с квестами + доделана карта №3

--- a/Roguelike.vcxproj
+++ b/Roguelike.vcxproj
@@ -124,7 +124,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="chest2.cpp" />
+    <ClCompile Include="chests.cpp" />
     <ClCompile Include="level2.cpp" />
+    <ClCompile Include="level3.cpp" />
     <ClCompile Include="NPC2.cpp" />
     <ClCompile Include="Roguelike.cpp" />
     <ClCompile Include="gameFunctions.cpp" />
@@ -138,9 +140,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chest2.h" />
+    <ClInclude Include="chests.h" />
     <ClInclude Include="chests1.h" />
     <ClInclude Include="gameFunctions.h" />
     <ClInclude Include="level2.h" />
+    <ClInclude Include="level3.h" />
     <ClInclude Include="NPC1.h" />
     <ClInclude Include="NPC2.h" />
     <ClInclude Include="spavner.h" />
